<resources>
    <string name="app_name">Bits and Pizzas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order_fragment_text">This is the order fragment</string>
    <string name="diavolo">Diavolo</string>
    <string name="funghi">Funghi</string>
    <string name="extra_choice">Please choose any extras:</string>
    <string name="parmesan">Parmesan</string>
    <string name="chili_oil">Chili Oil</string>
</resources>